# ZK-Dictionary

./: .gitignore  README.md  main.py  pyproject.toml
