[tool.poetry]
name = "zk-dictionary"
version = "0.1.0"
description = ""
authors = ["Will Simpson <will@kestrelcreek.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zk_dictionary"}]

[tool.poetry.dependencies]
python = "^3.8"
urllib3_1_26_2 = "^1.26.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
